--- a/newtab/css/style.css
+++ b/newtab/css/style.css
@@ -1591,49 +1591,13 @@
   font-family: 'Source Code Pro';
   src: url("../fonts/SourceCodePro-Medium.ttf") format('truetype');
 }
-@font-face {
-  font-family: 'Noto Sans JP';
-  font-weight: 100;
-  src: url("../fonts/NotoSansJP-Thin.otf") format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans JP';
-  font-weight: 200;
-  src: url("../fonts/NotoSansJP-Light.otf") format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans JP';
-  font-weight: 300;
-  src: url("../fonts/NotoSansJP-DemiLight.otf") format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans JP';
-  font-weight: 400;
-  src: url("../fonts/NotoSansJP-Regular.otf") format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans JP';
-  font-weight: 500;
-  src: url("../fonts/NotoSansJP-Medium.otf") format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans JP';
-  font-weight: 600;
-  src: url("../fonts/NotoSansJP-Bold.otf") format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans JP';
-  font-weight: 700;
-  src: url("../fonts/NotoSansJP-Black.otf") format('opentype');
-}
 html,
 body {
   height: 100%;
   padding: 0;
   margin: 0;
   overflow: hidden;
-  font-family: 'Noto Sans JP';
-  font-weight: 300;
+  font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 .menu {
   background-color: #2f3d42;
@@ -1821,8 +1785,6 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   color: #666;
-  font-family: 'Noto Sans JP';
-  font-weight: 300;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
@@ -1854,11 +1816,11 @@ h4,
 h5,
 h6 {
   color: #000;
+  font-weight: bold;
   margin-top: 2em;
   margin-bottom: 1em;
 }
 h1 {
-  font-weight: 600;
   font-size: 1.9em;
   margin-top: 0;
 }
@@ -1887,7 +1849,6 @@ h1:before {
   visibility: hidden;
 }
 h2 {
-  font-weight: 500;
   font-size: 1.4em;
   background-color: #eee;
   margin-left: -0.5em;
@@ -1899,20 +1860,10 @@ h2 {
   border-radius: 6px;
 }
 h3 {
-  font-weight: 600;
   font-size: 1.1em;
   border-bottom: 1px solid #ccc;
   margin-bottom: 1em;
   padding-bottom: 0.2em;
-}
-h4 {
-  font-weight: 600;
-}
-h5 {
-  font-weight: 500;
-}
-h6 {
-  font-weight: 500;
 }
 a {
   color: #08f;
@@ -2050,4 +2001,265 @@ svg {
   color: rgba(47,61,66,0.2);
   cursor: default;
   pointer-events: none;
+}
+.output-area {
+  color: #2f3435;
+  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+  font-size: 105%;
+  line-height: 2em;
+  margin-bottom: 2em;
+/* reset */
+/* outputed text styles */
+}
+.output-area a {
+  color: #33a6b8;
+  text-decoration: none;
+}
+.output-area a:hover {
+  color: #2a8998;
+}
+.output-area strong,
+.output-area b {
+  font-weight: bold;
+}
+.output-area em {
+  font-style: italic;
+}
+.output-area code {
+  background: #f9f9f9;
+  text-shadow: 0 1px #fff;
+  padding: 0 0.3em;
+}
+.output-area del {
+  text-decoration: line-through;
+}
+.output-area sub,
+.output-area sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+}
+.output-area :root sub,
+.output-area :root sup {
+  vertical-align: baseline;
+}
+.output-area sup {
+  top: -0.5em;
+}
+.output-area sub {
+  bottom: -0.2em;
+}
+.output-area acronym,
+.output-area abbr {
+  border-bottom: 1px dotted;
+  font-variant: normal;
+}
+.output-area abbr {
+  cursor: help;
+}
+.output-area h1,
+.output-area h2,
+.output-area h3,
+.output-area h4,
+.output-area h5,
+.output-area h6 {
+  color: #222;
+  font-weight: bold;
+  background: none;
+  border: none;
+}
+.output-area h1 a,
+.output-area h2 a,
+.output-area h3 a,
+.output-area h4 a,
+.output-area h5 a,
+.output-area h6 a {
+  color: #222;
+  text-decoration: none;
+}
+.output-area h1 a:hover,
+.output-area h2 a:hover,
+.output-area h3 a:hover,
+.output-area h4 a:hover,
+.output-area h5 a:hover,
+.output-area h6 a:hover {
+  color: #222;
+}
+.output-area pre,
+.output-area code {
+  font-family: "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace;
+  font-size: 1em;
+}
+.output-area figure {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+.output-area .left,
+.output-area .alignleft {
+  float: left;
+}
+.output-area .right,
+.output-area .alignright {
+  float: right;
+}
+.output-area p {
+  margin: 0 0 1em 0;
+}
+.output-area img,
+.output-area video {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+.output-area a[title*="Flickr"] img {
+  height: auto !important;
+}
+.output-area h1,
+.output-area h2,
+.output-area h3,
+.output-area h4,
+.output-area h5,
+.output-area h6 {
+  margin: 1.25em 0 0.75em 0;
+  line-height: 1.5;
+}
+.output-area h1 {
+  font-size: 170%;
+}
+.output-area h2 {
+  font-size: 160%;
+}
+.output-area h3 {
+  font-size: 140%;
+}
+.output-area h4 {
+  font-size: 130%;
+}
+.output-area h5 {
+  font-size: 110%;
+}
+.output-area h6 {
+  font-size: 100%;
+}
+.output-area dt {
+  font-weight: bold;
+}
+.output-area ul {
+  list-style: disc !important;
+}
+.output-area ol {
+  list-style: decimal !important;
+}
+.output-area ul,
+.output-area ol,
+.output-area dl {
+  margin: 0 0 1em 1.5em;
+  padding: 0;
+}
+.output-area ul li ul,
+.output-area ol li ul,
+.output-area dl li ul,
+.output-area ul li ol,
+.output-area ol li ol,
+.output-area dl li ol {
+  margin-bottom: 0;
+}
+.output-area table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.output-area th {
+  font-weight: bold;
+  border-bottom: 3px solid #ddd;
+  padding-bottom: 0.5em;
+}
+.output-area td {
+  border-bottom: 1px solid #ddd;
+  padding: 10px 0;
+}
+.output-area blockquote {
+  font-family: Georgia, "Times New Roman", serif;
+  margin: 1.5em 2.6em;
+  padding: 5px 20px;
+  border-left: 2px solid #aaa;
+  color: #777;
+}
+.output-area blockquote p:last-child {
+  margin-bottom: 0;
+}
+.output-area blockquote footer {
+  font-size: 100%;
+  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+}
+.output-area blockquote footer cite:before {
+  content: "—";
+  padding: 0 0.5em;
+}
+.output-area .pullquote {
+  border-left: 0;
+  font-family: Georgia, "Times New Roman", serif;
+  text-align: left;
+  width: 45%;
+  margin: 10px 0 0 0;
+}
+.output-area .pullquote .left {
+  margin-left: 0.5em;
+  margin-right: 1em;
+}
+.output-area .pullquote .right {
+  margin-right: 0.5em;
+  margin-left: 1em;
+}
+.output-area .caption {
+  color: #2f3435;
+  display: block;
+  font-size: 0.9em;
+  margin-top: 0.5em;
+  position: relative;
+  text-align: center;
+}
+.output-area .video-container {
+  position: relative;
+  padding-top: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+.output-area .video-container iframe,
+.output-area .video-container object,
+.output-area .video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin-top: 0;
+}
+.output-area pre {
+  padding: 15px;
+  background: #f5f5f5;
+  border: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  word-wrap: normal;
+  overflow-x: auto;
+  font-size: 100%;
+  line-height: 1.3;
+}
+.output-area figure.highlight {
+  margin-bottom: 1em;
+}
+.output-area hr {
+  width: 20%;
+  margin: 3em auto;
+  border: 0;
+  border-top: 3px solid #d5d5d5;
 }
