--- a/newtab/stylus/_bass/base.styl
+++ b/newtab/stylus/_bass/base.styl
@@ -5,51 +5,13 @@
   font-family: 'Source Code Pro'
   src: url('../fonts/SourceCodePro-Medium.ttf') format('truetype')
 
-/* Noto Sans JP */
-
-@font-face
-  font-family: 'Noto Sans JP'
-  font-weight: 100
-  src: url('../fonts/NotoSansJP-Thin.otf') format('opentype')
-
-@font-face
-  font-family: 'Noto Sans JP'
-  font-weight: 200
-  src: url('../fonts/NotoSansJP-Light.otf') format('opentype')
-
-@font-face
-  font-family: 'Noto Sans JP'
-  font-weight: 300
-  src: url('../fonts/NotoSansJP-DemiLight.otf') format('opentype')
-
-@font-face
-  font-family: 'Noto Sans JP'
-  font-weight: 400
-  src: url('../fonts/NotoSansJP-Regular.otf') format('opentype')
-
-@font-face
-  font-family: 'Noto Sans JP'
-  font-weight: 500
-  src: url('../fonts/NotoSansJP-Medium.otf') format('opentype')
-
-@font-face
-  font-family: 'Noto Sans JP'
-  font-weight: 600
-  src: url('../fonts/NotoSansJP-Bold.otf') format('opentype')
-
-@font-face
-  font-family: 'Noto Sans JP'
-  font-weight: 700
-  src: url('../fonts/NotoSansJP-Black.otf') format('opentype')
-
 html,
 body
   height: 100%
   padding: 0
   margin: 0
   overflow: hidden
-  font-family: 'Noto Sans JP'
-  font-weight: 300
+  font-family: $FONTFAMILY
 
 .menu
   background-color: #2f3d42
@@ -210,8 +172,6 @@ body
   padding: 1em
   box-sizing: border-box
   color: #666
-  font-family: 'Noto Sans JP'
-  font-weight: 300
   font-size: 1em
   -webkit-font-smoothing: antialiased
   font-smoothing: antialiased
@@ -239,11 +199,11 @@ body
 /* outputed text styles */
 h1, h2, h3, h4, h5, h6
   color: #000
+  font-weight: bold
   margin-top: 2em
   margin-bottom: 1em
 
 h1
-  font-weight: 600
   font-size: 1.9em
   margin-top: 0
 
@@ -270,7 +230,6 @@ h1:before
   visibility: hidden
 
 h2
-  font-weight: 500
   font-size: 1.4em
   background-color: #eee
   margin-left: -0.5em
@@ -281,20 +240,10 @@ h2
   border-radius: 6px
 
 h3
-  font-weight: 600
   font-size: 1.1em
   border-bottom: 1px solid #ccc
   margin-bottom: 1em
   padding-bottom: 0.2em
-
-h4
-  font-weight: 600
-
-h5
-  font-weight: 500
-
-h6
-  font-weight: 500
 
 a
   color: #08f
