--- a/plugin/newtab/css/style.css
+++ b/plugin/newtab/css/style.css
@@ -2057,6 +2057,9 @@ svg {
 .output-area abbr {
   cursor: help;
 }
+.output-area h1:before {
+  display: none;
+}
 .output-area h1,
 .output-area h2,
 .output-area h3,
@@ -2064,6 +2067,8 @@ svg {
 .output-area h5,
 .output-area h6 {
   color: #222;
+  margin: 0;
+  padding: 0;
   font-weight: bold;
   background: none;
   border: none;
