--- a/plugin/newtab/stylus/_theme/article.styl
+++ b/plugin/newtab/stylus/_theme/article.styl
@@ -48,9 +48,14 @@
 
   abbr
     cursor: help
+  h1
+    &:before
+      display: none
 
   h1, h2, h3, h4, h5, h6
     color: color-title
+    margin: 0
+    padding: 0
     font-weight: bold
     background: none
     border: none
